Fix Drawer visible through the View Header on top of it.

--- a/styles/mobile/ios7.less
+++ b/styles/mobile/ios7.less
@@ -44,6 +44,7 @@
 }
 
 .km-ios7,
+.km-ios7 .km-view,
 .km-ios7 .km-widget.km-scroll-wrapper
 {
     color: @ios7-main-color;
